--- a/.github/workflows/compliance/sbom.yml
+++ b/.github/workflows/compliance/sbom.yml
@@ -15,7 +15,7 @@ jobs:
     sbom:
         uses: .github/workflows/templates/nox-template-matrix.yml
         with:
-            sessions: "sbom"
+            session: "sbom"
 
     upload-sarif:
         name: Upload SARIF to GitHub Security tab
