--- a/.github/workflows/security/security-trivy.yml
+++ b/.github/workflows/security/security-trivy.yml
@@ -1,80 +1,109 @@
 name: Security - Trivy
 
 on:
-    pull_request:
-        branches: [ main ]
-    push:
-        branches: [ main ]
-    workflow_dispatch:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+  workflow_dispatch:
 
 permissions:
-    contents: read
-    security-events: write
-    pull-requests: write
+  contents: read
+  security-events: write
+  pull-requests: write
 
 jobs:
-    trivy:
-        name: Run Trivy vulnerability scan
-        runs-on: ubuntu-22.04
-        steps:
-            -   name: Checkout repository
-                uses: actions/checkout@v4.1.0
+  trivy:
+    name: Run Trivy vulnerability scan
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
 
-            -   name: Set up Docker Buildx
-                uses: docker/setup-buildx-action@v2.9.1
+      - name: Checkout repository
+        uses: actions/checkout@<SHA_FOR_V4_1_0>
 
-            -   name: Build Docker image
-                run: docker build -t ledgerbase:latest .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@<SHA_FOR_V2_9_1>
 
-            -   name: Run Trivy with SARIF output
-                uses: aquasecurity/trivy-action@v0.11.2
-                with:
-                    image-ref: 'ledgerbase:latest'
-                    format: 'sarif'
-                    output: 'trivy-results.sarif'
-                    exit-code: '0'               # Allow scan to proceed
-                    ignore-unfixed: true
-                    severity: 'HIGH,CRITICAL'
+      - name: Build Docker image with commit SHA tag
+        run: docker build -t ledgerbase:${{ github.sha }} .
 
-            -   name: Check if SARIF file was created
-                run: |
-                    if [ ! -f trivy-results.sarif ]; then
-                      echo "::error::SARIF output not found. Trivy scan may have failed."
-                      exit 1
-                    fi
+      - name: Run Trivy with SARIF output
+        uses: aquasecurity/trivy-action@<SHA_FOR_V0_11_2>
+        with:
+          image-ref: ledgerbase:${{ github.sha }}
+          format: sarif
+          output: trivy-results.sarif
+          exit-code: '0'
+          ignore-unfixed: true
+          severity: 'HIGH,CRITICAL'
 
-            -   name: Count HIGH/CRITICAL issues in SARIF
-                id: count
-                run: |
-                    count=$(jq '[.runs[].results[] | select(.level == "error" or .level == "warning")] | length' trivy-results.sarif)
-                    echo "Total HIGH/CRITICAL issues: $count"
-                    echo "vulns=$count" >> $GITHUB_OUTPUT
+      - name: Also generate JSON report for review
+        run: |
+          docker run --rm \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            aquasec/trivy:latest \
+            image \
+            --format json \
+            --output trivy-results.json \
+            --severity HIGH,CRITICAL \
+            --ignore-unfixed \
+            ledgerbase:${{ github.sha }}
 
-            -   name: Upload SARIF to GitHub Security tab
-                uses: github/codeql-action/upload-sarif@v3.24.9
-                with:
-                    sarif_file: trivy-results.sarif
+      - name: Check if SARIF file was created
+        run: |
+          if [ ! -f trivy-results.sarif ]; then
+            echo "::error::SARIF output not found. Trivy scan may have failed."
+            exit 1
+          fi
 
-            -   name: Fail job if high-severity vulnerabilities found
-                if: steps.count.outputs.vulns != '0'
-                run: |
-                    echo "::error::Trivy found ${{ steps.count.outputs.vulns }} HIGH or CRITICAL vulnerabilities."
-                    exit 1
+      - name: Check if JSON file was created
+        run: |
+          if [ ! -f trivy-results.json ]; then
+            echo "::error::JSON output not found. Trivy scan may have failed."
+            exit 1
+          fi
 
-            -   name: Label PR if Trivy issues found
-                if: github.event_name == 'pull_request' && steps.count.outputs.vulns != '0'
-                uses: actions/github-script@v7.1.0
-                with:
-                    script: |
-                        const label = 'security:trivy';
-                        const pr = context.payload.pull_request;
-                        if (!pr) {
-                          console.log("No pull request context. Skipping label.");
-                          return;
-                        }
-                        await github.rest.issues.addLabels({
-                          owner: context.repo.owner,
-                          repo: context.repo.repo,
-                          issue_number: pr.number,
-                          labels: [label],
-                        });
+      - name: Count HIGH/CRITICAL issues in SARIF
+        id: count
+        run: |
+          count=$(jq '[.runs[].results[] | select(.level == "error" or .level == "warning")] | length' trivy-results.sarif)
+          echo "Total HIGH/CRITICAL issues: $count"
+          echo "vulns=$count" >> $GITHUB_OUTPUT
+
+      - name: Upload SARIF to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@<SHA_FOR_V3_24_9>
+        with:
+          sarif_file: trivy-results.sarif
+
+      - name: Upload JSON artifact
+        if: always()
+        uses: actions/upload-artifact@<SHA_FOR_V4>
+        with:
+          name: trivy-json
+          path: trivy-results.json
+
+      - name: Fail job if high-severity vulnerabilities found
+        if: steps.count.outputs.vulns != '0'
+        run: |
+          echo "::error::Trivy found ${{ steps.count.outputs.vulns }} HIGH or CRITICAL vulnerabilities."
+          exit 1
+
+      - name: Label PR if Trivy issues found
+        if: github.event_name == 'pull_request' && steps.count.outputs.vulns != '0'
+        uses: actions/github-script@<SHA_FOR_V7_1_0>
+        with:
+          script: |
+            const label = 'security:trivy';
+            const pr = context.payload.pull_request;
+            if (!pr || !pr.number) {
+              console.log("No pull request context or PR number. Skipping label.");
+              return;
+            }
+            await github.rest.issues.addLabels({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: pr.number,
+              labels: [label],
+            });
