--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,14 +2,14 @@
 # description = Configuration for pre-commit hooks: linting, security scans, formatting, and code health checks
 # category = ci
 # usage = Automatically run on git commit and push to enforce code standards and security policies
-# behavior = Defines repositories and hooks to run (e.g., ruff, black, bandit, semgrep, pip-audit, custom scripts)
+# behavior = Defines repositories and hooks to run (e.g., ruff, mypy, bandit, semgrep, pip-audit, custom scripts)
 # inputs = Staged files, pipeline triggers (commit, push)
 # outputs = Modified files (via fixes), hook exit codes indicating pass/fail
-# dependencies = pre-commit framework, ruff, black, mypy, bandit, semgrep, pip-audit, nox
+# dependencies = pre-commit framework, ruff, mypy, bandit, semgrep, pip-audit, nox
 # author = Byron Williams
-# last_modified = 2025-04-19
+# last_modified = 2025-04-20
 # tags = ci, automation, security, linting, scanning
-# changelog = Updated semgrep hook to unified .semgrep.yml; replaced modular script with nox-semgrep
+# changelog = Converted all core hooks to system‑installed Poetry versions; removed heavy CI‑only hooks
 
 default_language_version:
   python: python3.11
@@ -33,112 +33,128 @@ exclude: |
   )/
 
 repos:
-  # ----------------------------
-  # Python code quality tools
-  # ----------------------------
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: d119aaff6891558b6eaf52518386871d1d267131  # pragma: allowlist secret # pinned rev for ruff :contentReference[oaicite:2]{index=2}&#8203;:contentReference[oaicite:3]{index=3}
+  # ┌───────────────────────────────────────────────────┐
+  # │ Local “system” hooks calling project-installed  │
+  # │ Poetry/Nox tools (exact versions from pyproject)│
+  # └───────────────────────────────────────────────────┘
+  - repo: local
     hooks:
+      # --- Ruff Hook (Assuming you already fixed it like below) ---
       - id: ruff
-        name: ruff (lint and fix)
-        args: ["--fix"]
+        name: Ruff Check & Fix (project-installed)
+        entry: poetry run ruff check --fix --exit-non-zero-on-fix
+        language: system
+        types: [python]
+        pass_filenames: true # Ruff handles passed filenames well with check/format
 
-  - repo: https://github.com/psf/black
-    rev: 8a737e727ac5ab2f1d4cf5876720ed276dc8dc4b # pragma: allowlist secret
-    hooks:
-      - id: black
+      # --- Mypy Hook (Updated to use Nox) ---
+      - id: mypy # Keep original ID or change to mypy-nox
+        name: Mypy (via Nox) # Updated name
+        entry: poetry run nox -rs mypy # Call the 'mypy' Nox session
+        language: system
+        types: [python]       # Keep this to optimize *when* the hook runs
+        pass_filenames: false # The Nox session defines targets (PACKAGE_DIR)
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: f40886d54c729f533f864ed6ce584e920feb0af7 # pragma: allowlist secret
-    hooks:
-      - id: mypy
-        additional_dependencies:
-          - Flask
-          - types-Flask
-          - pydantic
+      # --- Bandit Hook (Updated to use Nox) ---
+      - id: bandit # Keep original ID or change to bandit-nox
+        name: Bandit (via Nox) # Updated name
+        entry: poetry run nox -rs bandit_scan # Call the 'bandit_scan' Nox session
+        language: system
+        types: [python]       # Keep this to optimize *when* the hook runs
+        pass_filenames: false # The Nox session defines targets (PACKAGE_DIR)
 
-  - repo: https://github.com/PyCQA/bandit
-    rev: 8ff25e07e487f143571cc305e56dd0253c60bc7b # pragma: allowlist secret
-    hooks:
-      - id: bandit
+      # --- Semgrep Hook (Keep as is - already uses Nox) ---
+      - id: semgrep
+        name: Semgrep (project‑installed)
+        entry: poetry run nox -rs semgrep_ci
+        language: system
+        pass_filenames: false # Nox session handles files
 
-  # ----------------------------
-  # General file and security checks
-  # ----------------------------
+      # --- Vulture Hook (Keep as is - already uses Nox) ---
+      - id: vulture
+        name: Vulture (project‑installed)
+        entry: poetry run nox -rs vulture
+        language: system
+        pass_filenames: false # Nox session handles files
+
+      # --- ShellCheck Hook (Keep as is - already uses Nox) ---
+      - id: shellcheck
+        name: ShellCheck (project‑installed)
+        entry: poetry run nox -rs shellcheck
+        language: system
+        pass_filenames: false # Nox session handles files
+
+      # --- Codespell Hook (Updated to use Nox via lint_other) ---
+      - id: codespell # Keep original ID or change to codespell-nox
+        name: Codespell (via Nox lint_other) # Updated name
+        entry: poetry run nox -rs lint_other # Call the 'lint_other' Nox session
+        language: system
+        # Decide which file changes should trigger the whole 'lint_other' session
+        # Option A: Trigger on changes to types linted by lint_other
+        types: [python, yaml, markdown] # Add other relevant types if needed
+        # Option B: Trigger on changes to specific files/patterns
+        # files: \\.(py|yaml|yml|md)$
+        pass_filenames: false # The Nox session defines targets
+
+      # --- Pip-Audit Hook (Keep as is, but consider migrating stage name) ---
+      - id: pip-audit
+        name: pip-audit (project‑installed)
+        entry: poetry run pip-audit
+        language: system
+        stages: [push] # Remember the warning: pre-commit migrate-config suggested
+        pass_filenames: false
+
+  # ┌───────────────────────────────────────────────────┐
+  # │ Standard file‑ and security‑hooks (external)     │
+  # └───────────────────────────────────────────────────┘
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: 2c9f875913ee60ca25ce70243dc24d5b6415598c # pragma: allowlist secret
+    rev: v4.4.0
     hooks:
-      - id: check-yaml               # validate YAML syntax
-      - id: end-of-file-fixer       # ensure newline at end of file
-      - id: trailing-whitespace      # remove extra whitespace
-      - id: debug-statements        # prevent leftover debug code
-      - id: fix-byte-order-marker   # strip BOMs
-      - id: name-tests-test         # enforce test file naming
-      - id: requirements-txt-fixer  # normalize requirements.txt
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+      - id: debug-statements
+      - id: fix-byte-order-marker
+      - id: requirements-txt-fixer
 
   - repo: https://github.com/Yelp/detect-secrets
     rev: 01886c8a910c64595c47f186ca1ffc0b77fa5458 # pragma: allowlist secret
     hooks:
-      - id: detect-secrets           # catch hardcoded credentials
+      - id: detect-secrets
         args: ["--baseline", ".secrets.baseline"]
 
-  # ----------------------------
-  # Markdown & documentation linter
-  # ----------------------------
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.16.3
+    hooks:
+      - id: gitleaks
+
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: 586c3ea3f51230da42bab657c6a32e9e66c364f0 # pragma: allowlist secret
     hooks:
       - id: markdownlint
-        name: markdownlint
         entry: markdownlint
         language: system
         types: [markdown]
         args:
           - --disable
-          - MD013  # disable line-length for tables
-          - MD051  # disable unordered-list indent
+          - MD013
+          - MD051
+          - --fix
 
-  - repo: https://github.com/sphinx-contrib/sphinx-lint
-    rev: ff671d6a030a3141634793e6d1e8909ab6091830  # pragma: allowlist secret # latest as of April 2025
-    hooks:
-      - id: sphinx-lint
-
-
-
-  - repo: https://github.com/gitleaks/gitleaks
-    rev: v8.16.3
-    hooks:
-      - id: gitleaks                 # detect sensitive info in git history
-
-  - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: 38980559e3a605691d6579f96222c30778e5a69e # pragma: allowlist secret
-    hooks:
-      - id: shellcheck              # lint shell scripts
-
-
-  # ----------------------------
-  # Dependency audit
-  # ----------------------------
-  - repo: https://github.com/pypa/pip-audit
-    rev: 89ba95983281980506b662fb08cea634d75907c5 # pragma: allowlist secret
-    hooks:
-      - id: pip-audit
-        stages: [push]              # run on CI push only
-
-  # ----------------------------
-  # Local custom hooks
-  # ----------------------------
+  # ┌───────────────────────────────────────────────────┐
+  # │ Your local custom validation scripts             │
+  # └───────────────────────────────────────────────────┘
   - repo: local
     hooks:
       - id: validate-env-prod-sops
         name: Validate Required Keys in .env.prod.sops.yaml
         entry: ./validate_env_keys.sh
-        language: system
+        language: script
         files: ^\.env\.prod\.sops\.yaml$
 
       - id: forbid-new-env-prod
         name: Forbid .env.prod commits
-        entry: bash -c 'grep -q "SNYK_TOKEN" $1 && echo "❌ Committing .env.prod with secrets is forbidden." && exit 1 || exit 0'
+        entry: bash -c 'grep -q "SNYK_TOKEN" "$@" && echo "❌ Committing .env.prod with secrets is forbidden." && exit 1 || exit 0' --
         language: system
         types: [file]
         files: ^\.env\.prod$
@@ -150,23 +166,4 @@ repos:
         additional_dependencies:
           - pydantic
           - pathspec
-        files: '\.(py|sh|ya?ml|toml)$'
-
-      - id: nox-license
-        name: Nox ➟ License Report
-        language: python
-        additional_dependencies:
-          - poetry
-          - nox
-        entry: poetry run nox -s license_report
-        pass_filenames: false
-        stages: [commit, push]
-
-      -   id: nox-semgrep-ci
-          name: Nox ➟ Semgrep (diff only)
-          language: python
-          additional_dependencies:
-            - nox
-          entry: nox -rs semgrep_ci
-          pass_filenames: false
-          stages: [commit, push]
+        files: '\\.(py|sh|ya?ml|toml)$'
